--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Security Growler</h1>
+        <h1>Security Growler <img source="https://github.com/nikisweeting/security-growler/raw/master/notify.png"/></h1>
         <p>A Mac menubar app that notifies you via growl whenever an ssh, ftp, vnc, sudo, or afp login to your machine occurs.</p>
 
         <p class="view"><a href="https://github.com/nikisweeting/security-growler">View the Project on GitHub <small>nikisweeting/security-growler</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/nikisweeting/security-growler/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/nikisweeting/security-growler/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/nikisweeting/security-growler/zipball/master">Download <strong></strong>APP</a></li>
+          <li><a href="https://github.com/nikisweeting/security-growler/tarball/master">Download <strong>Source ZIP</strong></a></li>
           <li><a href="https://github.com/nikisweeting/security-growler">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
@@ -37,9 +37,9 @@
 <a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Install:</h2>
 
 <ol>
-<li>Download and run <a href="https://github.com/nikisweeting/security-growler/raw/master/Security-Growler.app.zip">Security Growler.app</a>
+<li>Download and run <a href="https://github.com/nikisweeting/security-growler/raw/master/Security-Growler.app.zip"><button>Security Growler.app</button></a>
 </li>
-<li>Run <code>sudo easy_install gntp</code> in Terminal to enable Growl support<br>
+<li>If you use <a href="http://growl.info/">Growl</a> instead of (10.8 and above's) Notification Center, run <code>sudo easy_install gntp</code> in Terminal to enable Growl support<br>
 (otherwise events are logged silently to the menubar)</li>
 </ol><h2>
 <a name="information" class="anchor" href="#information"><span class="octicon octicon-link"></span></a>Information:</h2>
