--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Security Growler <img source="https://github.com/nikisweeting/security-growler/raw/master/notify.png"/></h1>
+        <h1>Security Growler <img height="80px" source="https://raw.github.com/nikisweeting/security-growler/master/alert.png"/></h1>
         <p>A Mac menubar app that notifies you via growl whenever an ssh, ftp, vnc, sudo, or afp login to your machine occurs.</p>
 
         <p class="view"><a href="https://github.com/nikisweeting/security-growler">View the Project on GitHub <small>nikisweeting/security-growler</small></a></p>
@@ -37,7 +37,7 @@
 <a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Install:</h2>
 
 <ol>
-<li>Download and run <a href="https://github.com/nikisweeting/security-growler/raw/master/Security-Growler.app.zip"><button>Security Growler.app</button></a>
+<li>Download and run <a href="https://github.com/nikisweeting/security-growler/raw/master/Security%20Growler.app.zip"><button>Security Growler.app</button></a>
 </li>
 <li>If you use <a href="http://growl.info/">Growl</a> instead of (10.8 and above's) Notification Center, run <code>sudo easy_install gntp</code> in Terminal to enable Growl support<br>
 (otherwise events are logged silently to the menubar)</li>
