--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Security Growler <img height="80px" source="https://raw.github.com/nikisweeting/security-growler/master/alert.png"/></h1>
+        <h1>Security Growler <img height="80px" source="http://nikisweeting.github.io/security-growler/alert.png"/></h1>
         <p>A Mac menubar app that notifies you via growl whenever an ssh, ftp, vnc, sudo, or afp login to your machine occurs.</p>
 
         <p class="view"><a href="https://github.com/nikisweeting/security-growler">View the Project on GitHub <small>nikisweeting/security-growler</small></a></p>
