--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Security Growler <img height="80px" source="http://nikisweeting.github.io/security-growler/alert.png"/></h1>
+        <h1>Security Growler</h1>
         <p>A Mac menubar app that notifies you via growl whenever an ssh, ftp, vnc, sudo, or afp login to your machine occurs.</p>
 
         <p class="view"><a href="https://github.com/nikisweeting/security-growler">View the Project on GitHub <small>nikisweeting/security-growler</small></a></p>
@@ -29,7 +29,9 @@
       </header>
       <section>
         <h1>
-<a name="security-growler" class="anchor" href="#security-growler"><span class="octicon octicon-link"></span></a>Security Growler</h1>
+<a name="security-growler" class="anchor" href="#security-growler"><span class="octicon octicon-link"></span></a>Security Growler
+  <img height="40px" source="http://nikisweeting.github.io/security-growler/alert.png" style="display: inline; margin: 5px; margin-bottom: -10px;"/>
+</h1>
 
 <p>This menubar app for OS X will notify you via Growl or Notifcation Center if any SSH, FTP, VNC, AFP, or Sudo authentication events occur.  It's very useful if you're paranoid about people trying to hack into your computer.  Or... if you simply like having information about people using your computer's resources.  It's easily extensible in python, you can add modules that watch logfiles or processes and do whatever you want.</p>
 
