--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
         <ul>
-          <li><a href="https://github.com/nikisweeting/security-growler/zipball/master">Download <strong></strong>APP</a></li>
+          <li><a href="https://github.com/nikisweeting/security-growler/zipball/master">Download <strong>APP</strong></a></li>
           <li><a href="https://github.com/nikisweeting/security-growler/tarball/master">Download <strong>Source ZIP</strong></a></li>
           <li><a href="https://github.com/nikisweeting/security-growler">View On <strong>GitHub</strong></a></li>
         </ul>
@@ -30,7 +30,7 @@
       <section>
         <h1>
 <a name="security-growler" class="anchor" href="#security-growler"><span class="octicon octicon-link"></span></a>Security Growler
-  <img height="40px" source="http://nikisweeting.github.io/security-growler/alert.png" style="display: inline; margin: 5px; margin-bottom: -10px;"/>
+  <img height="40px" src="http://nikisweeting.github.io/security-growler/alert.png" style="display: inline; margin: 5px; margin-bottom: -10px;"/>
 </h1>
 
 <p>This menubar app for OS X will notify you via Growl or Notifcation Center if any SSH, FTP, VNC, AFP, or Sudo authentication events occur.  It's very useful if you're paranoid about people trying to hack into your computer.  Or... if you simply like having information about people using your computer's resources.  It's easily extensible in python, you can add modules that watch logfiles or processes and do whatever you want.</p>
