--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 
 <h1></h1>
 
-<p><strong>Nick Sweeting 2014 -- MIT License</strong>  </p>
+<p><strong><a href="http://nicksweeting.com">nicksweeting.com</a> 2014 -- MIT License</strong>  </p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nikisweeting">nikisweeting</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small><a href="http://nicksweeting.com">Nick Sweeting</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
