--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nikisweeting">nikisweeting</a></p>
+        <img width="200px" src="http://nikisweeting.github.io/security-growler/alert.png"/>
         <p><small><a href="http://nicksweeting.com">Nick Sweeting</a></small></p>
+        <p>I'm a 17 year old dev living in Portland, OR. I'm currently working for <a href="http://thehotspot.com">The Hotspot</a></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
