added star buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>A Mac menubar app that notifies you via growl whenever an ssh, ftp, vnc, sudo, or afp login to your machine occurs.</p>
 
         <p class="view"><a href="https://github.com/nikisweeting/security-growler">View the Project on GitHub <small>nikisweeting/security-growler</small></a></p>
-
+        <table><tr><td><iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=watch&count=true&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true"></iframe></td><td><iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=fork&count=true&size=large" height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;" allowTransparency="true"></iframe></td><td><iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&type=follow&count=true&size=large" height="30" width="240" frameborder="0" scrolling="0" style="width:240px; height: 30px;" allowTransparency="true"></iframe></td></tr></table>
 
         <ul>
           <li><a href="https://github.com/nikisweeting/security-growler/zipball/master">Download <strong>APP</strong></a></li>
