--- a/index.html
+++ b/index.html
@@ -19,19 +19,10 @@
         <p>A Mac menubar app that notifies you via growl whenever an ssh, ftp, vnc, sudo, or afp login to your machine occurs.</p>
 
         <p class="view"><a href="https://github.com/nikisweeting/security-growler">View the Project on GitHub <small>nikisweeting/security-growler</small></a></p>
-        <table>
-          <tr>
-            <td>
-              <iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=watch&count=true" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe>
-            </td>
-            <td>
-              <iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=fork&count=true" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe>
-              </td>
-            <td>
-              <iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&type=follow&count=true" height="30" width="168" frameborder="0" scrolling="0" style="width:168px; height: 30px;" allowTransparency="true"></iframe>
-            </td>
-          </tr>
-        </table>
+
+        <iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=watch&count=true" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=fork&count=true" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe><br>
+        <iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&type=follow&count=true" height="30" width="168" frameborder="0" scrolling="0" style="width:168px; height: 30px;" allowTransparency="true"></iframe>
 
         <ul>
           <li><a href="https://github.com/nikisweeting/security-growler/zipball/master">Download <strong>APP</strong></a></li>
