--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
 </li>
 <li>If you use <a href="http://growl.info/">Growl</a> instead of (10.8 and above's) Notification Center, run <code>sudo easy_install gntp</code> in Terminal to enable Growl support<br>
 (otherwise events are logged silently to the menubar)</li>
-</ol><h2>
+</ol>
+
+<img width="400px" src="screenshot1.png" style="padding: 10px; margin-left: auto; margin-right: auto;"/>
+<img width="400px" src="screenshot2.png" style="padding: 10px; margin-left: auto; margin-right: auto;"/>
+
+<h2>
 <a name="information" class="anchor" href="#information"><span class="octicon octicon-link"></span></a>Information:</h2>
 
 <p>I was tired of not being able to find an app that would quell my paranoia about open ports, so I made one myself.  Now I can relax whenever I'm in a seedy internet cafe or connected to free Boingo airport wifi because I know if anyone is trying to connect to my computer.</p>
