--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 (otherwise events are logged silently to the menubar)</li>
 </ol>
 
-<img width="400px" src="screenshot1.png" style="padding: 10px; margin-left: auto; margin-right: auto;"/>
-<img width="400px" src="screenshot2.png" style="padding: 10px; margin-left: auto; margin-right: auto;"/>
+<img src="screenshot1.png" style="padding: 10px;"/>
+<img src="screenshot2.png" style="padding: 10px;"/>
 
 <h2>
 <a name="information" class="anchor" href="#information"><span class="octicon octicon-link"></span></a>Information:</h2>
