--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 
 <p>I was tired of not being able to find an app that would quell my paranoia about open ports, so I made one myself.  Now I can relax whenever I'm in a seedy internet cafe or connected to free Boingo airport wifi because I know if anyone is trying to connect to my computer.</p>
 
-<p>This app will notify you if any SSH, FTP, VNC, AFP, or sudo authentication events occur.  It does <b>not</b> increase your security in any way, it just notifies you <b>who</b> and <b>when</b> people are authenticated on your computer.  It also notifies you whenever an apache error occurs (although you may want to turn this off if you develop locally, getting growl bubbles on every pageload is annoying).  Simply comment out these three lines in <code>Security Growler.app/Contents/Resources/growler.py</code> to do so:  </p>
+<p>This app will notify you if any SSH, FTP, VNC, AFP, or sudo authentication events occur.  <br>It does <b>not</b> increase your security in any way, it just notifies you <b>who</b> and <b>when</b> people are authenticated on your computer.  It also notifies you whenever an apache error occurs (although you may want to turn this off if you develop locally, getting growl bubbles on every pageload is annoying).</p>
+
+<h2>To disable apache error notifications:</h2>
+<p>Simply comment out these three lines in <code>Security Growler.app/Contents/Resources/growler.py</code></p>
 
 <pre><code>  #if apache_event:
   #    print("[&gt;] secnotify[%s]: %s" % (apache_event, apache_line))
