--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <p>A Mac menubar app that notifies you via growl whenever an ssh, ftp, vnc, sudo, or afp login to your machine occurs.</p>
 
         <p class="view"><a href="https://github.com/nikisweeting/security-growler">View the Project on GitHub <small>nikisweeting/security-growler</small></a></p>
-
+        <iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=watch&count=true" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=fork&count=false" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe>
         <ul>
           <li><a href="https://github.com/nikisweeting/security-growler/zipball/master">Download <strong>APP</strong></a></li>
           <li><a href="https://github.com/nikisweeting/security-growler/tarball/master">Download <strong>Source ZIP</strong></a></li>
@@ -31,7 +32,6 @@
 <a name="security-growler" class="anchor" href="#security-growler"><span class="octicon octicon-link"></span></a>Security Growler
   <img height="40px" src="http://nikisweeting.github.io/security-growler/alert.png" style="display: inline; margin: 5px; margin-bottom: -10px;"/>
 </h1>
-<table><tr><td><iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=watch&count=true" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe></td><td><iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=fork&count=false" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe></td></tr></table>
 <p>This menubar app for OS X will notify you via Growl or Notifcation Center if any SSH, FTP, VNC, AFP, or Sudo authentication events occur.  It's very useful if you're paranoid about people trying to hack into your computer.  Or... if you simply like having information about people using your computer's resources.  It's easily extensible in python, you can add modules that watch logfiles or processes and do whatever you want.</p>
 
 <h2>
