added link to pushalotauth

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   #    notify(content=apache_line, title=apache_event)
 </code></pre>
 
-<p>A sister project is available for Linux users: <a href="https://github.com/benjojo/PushAlotAuth">PushAlotAuth</a>, it uses the PushALot push-notification platform.</p>
+<p>A related project is available for Linux users: <a href="https://github.com/benjojo/PushAlotAuth">PushAlotAuth</a>, it uses the PushALot push-notification platform.</p>
 
 <p><strong><a href="http://nicksweeting.com">nicksweeting.com</a> 2014 -- MIT License</strong>  </p>
       </section>
