--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a name="security-growler" class="anchor" href="#security-growler"><span class="octicon octicon-link"></span></a>Security Growler
   <img height="40px" src="http://nikisweeting.github.io/security-growler/alert.png" style="display: inline; margin: 5px; margin-bottom: -10px;"/>
 </h1>
-<p>This menubar app for OS X will notify you via Growl or Notifcation Center if any SSH, FTP, VNC, AFP, or Sudo authentication events occur.  It's very useful if you're paranoid about people trying to hack into your computer.  Or... if you simply like having information about people using your computer's resources.  It's easily extensible in python, you can add modules that watch logfiles or processes and do whatever you want.<br><br>Use <a href="http://prowlapp.com/">Prowl</a> to send the notifications to you iPhone/iPad.</p>
+<p>This menubar app for OS X will notify you via Growl or Notifcation Center if any SSH, FTP, VNC, AFP, or Sudo authentication events occur.  It's very useful if you're paranoid about people trying to hack into your computer.  Or... if you simply like having information about people using your computer's resources.  It's easily extensible in python, you can add modules that watch logfiles or processes and do whatever you want.<br><br>Use <a href="http://prowlapp.com/">Prowl</a> to send the notifications to you iPhone/iPad when you're away.</p>
 
 <h2>
 <a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Install:</h2>
