added owa analytics code

--- a/index.html
+++ b/index.html
@@ -89,5 +89,27 @@
       })();
     </script>
     <!-- End Piwik Code -->
+
+    <!-- Start Open Web Analytics Tracker -->
+    <script type="text/javascript">
+    //<![CDATA[
+    var owa_baseUrl = 'http://nicksweeting.com/analytics/';
+    var owa_cmds = owa_cmds || [];
+    owa_cmds.push(['setSiteId', 'a9455ca8585a545ab86f83fc3619cab8']);
+    owa_cmds.push(['trackPageView']);
+    owa_cmds.push(['trackClicks']);
+    owa_cmds.push(['trackDomStream']);
+
+    (function() {
+      var _owa = document.createElement('script'); _owa.type = 'text/javascript'; _owa.async = true;
+      owa_baseUrl = ('https:' == document.location.protocol ? window.owa_baseSecUrl || owa_baseUrl.replace(/http:/, 'https:') : owa_baseUrl );
+      _owa.src = owa_baseUrl + 'modules/base/js/owa.tracker-combined-min.js';
+      var _owa_s = document.getElementsByTagName('script')[0]; _owa_s.parentNode.insertBefore(_owa, _owa_s);
+    }());
+    //]]>
+    </script>
+    <!-- End Open Web Analytics Code -->
+
+
   </body>
 </html>
