--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Security Growler by nikisweeting</title>
+    <title>Security Growler</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -18,19 +18,19 @@
         <h1>Security Growler</h1>
         <p>A Mac menubar app that notifies you via growl whenever an ssh, ftp, vnc, sudo, or afp login to your machine occurs.</p>
 
-        <p class="view"><a href="https://github.com/nikisweeting/security-growler">View the Project on GitHub <small>nikisweeting/security-growler</small></a></p>
-        <iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=watch&count=true" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=nikisweeting&repo=security-growler&type=fork&count=false" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe>
+        <p class="view"><a href="https://github.com/pirate/security-growler">View the Project on GitHub <small>pirate/security-growler</small></a></p>
+        <iframe src="http://ghbtns.com/github-btn.html?user=pirate&repo=security-growler&type=watch&count=true" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=pirate&repo=security-growler&type=fork&count=false" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe>
         <ul>
-          <li><a href="https://github.com/nikisweeting/security-growler/zipball/master">Download <strong>APP</strong></a></li>
-          <li><a href="https://github.com/nikisweeting/security-growler/tarball/master">Download <strong>Source ZIP</strong></a></li>
-          <li><a href="https://github.com/nikisweeting/security-growler">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/pirate/security-growler/zipball/master">Download <strong>APP</strong></a></li>
+          <li><a href="https://github.com/pirate/security-growler/tarball/master">Download <strong>Source ZIP</strong></a></li>
+          <li><a href="https://github.com/pirate/security-growler">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
         <h1>
 <a name="security-growler" class="anchor" href="#security-growler"><span class="octicon octicon-link"></span></a>Security Growler
-  <img height="40px" src="http://nikisweeting.github.io/security-growler/alert.png" style="display: inline; margin: 5px; margin-bottom: -10px;"/>
+  <img height="40px" src="http://pirate.github.io/security-growler/alert.png" style="display: inline; margin: 5px; margin-bottom: -10px;"/>
 </h1>
 <p>This menubar app for OS X will notify you via Growl or Notifcation Center if any SSH, FTP, VNC, AFP, or Sudo authentication events occur.  It's very useful if you're paranoid about people trying to hack into your computer.  Or... if you simply like having information about people using your computer's resources.  It's easily extensible in python, you can add modules that watch logfiles or processes and do whatever you want.<br><br>Use <a href="http://prowlapp.com/">Prowl</a> to send the notifications to you iPhone/iPad when you're away.</p>
 
@@ -38,7 +38,7 @@
 <a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Install:</h2>
 
 <ol>
-<li>Download and run <a href="https://github.com/nikisweeting/security-growler/raw/master/Security%20Growler.app.zip"><button>Security Growler.app</button></a>
+<li>Download and run <a href="https://github.com/pirate/security-growler/raw/master/Security%20Growler.app.zip"><button>Security Growler.app</button></a>
 </li>
 <li>If you use <a href="http://growl.info/">Growl</a> instead of (10.8 and above's) Notification Center, run <code>sudo easy_install gntp</code> in Terminal to enable Growl support<br>
 (otherwise events are logged silently to the menubar)</li>
