--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Security Growler</h1>
-        <p>A Mac menubar app that notifies you via growl whenever an ssh, ftp, vnc, sudo, or afp login to your machine occurs.</p>
+        <p>A Mac menubar app that notifies you via growl whenever an ssh, ftp, vnc, sudo, or afp login to your machine occurs. (Not Yosemite Ready yet)</p>
 
         <p class="view"><a href="https://github.com/pirate/security-growler">View the Project on GitHub <small>pirate/security-growler</small></a></p>
         <iframe src="http://ghbtns.com/github-btn.html?user=pirate&repo=security-growler&type=watch&count=true" height="30" width="118" frameborder="0" scrolling="0" style="width:118px; height: 30px;" allowTransparency="true"></iframe>
@@ -67,9 +67,9 @@
 <p><strong><a href="http://nicksweeting.com">nicksweeting.com</a> 2014 -- MIT License</strong>  </p>
       </section>
       <footer>
-        <p><small><a href="http://nicksweeting.com">Nick Sweeting</a></small></p>
+        <p><small><a href="https://nicksweeting.com">Nick Sweeting</a></small></p>
         <img width="200px" src="http://nicksweeting.com/squash.png"/>
-        <p>I'm a 17 year old dev living in Portland, OR. I'm currently working for <a href="http://thehotspot.com">The Hotspot</a></p>
+        <p>I'm an 18 year old dev who likes open source.  I'm currently working for <a href="http://drchrono.com">drchrono</a></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
