fix broken links

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ You can even forward alerts as push notifications to your iOS devices using <a h
 <a id="install" class="anchor" href="#install" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install:</h2>
 
 <ol>
-<li>Download and run <a href="https://github.com/nikisweeting/security-growler/raw/master/Security-Growler.app.zip">Security Growler.app &gt;&gt;</a>
+<li>Download and run <a href="https://github.com/pirate/security-growler/raw/master/Security%20Growler.app.zip">Security Growler.app &gt;&gt;</a>
 </li>
 <li>Click on the menubar icon once to start detecting events.</li>
 </ol>
@@ -187,6 +187,6 @@ See <a href="https://github.com/pirate/security-growler/blob/master/menubar.sh">
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
