--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h1>
-<a id="security-growler----" class="anchor" href="#security-growler----" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://pirate.github.io/security-growler">Security Growler</a>   <a href="https://github.com/pirate/security-growler"><img src="https://img.shields.io/github/stars/pirate/security-growler.svg" alt="Build Status"></a> <a href="https://twitter.com/thesquashSH"><img src="https://img.shields.io/twitter/url/http/shields.io.svg?style=social" alt="Twitter URL"></a>
+<a id="security-growler-----" class="anchor" href="#security-growler-----" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://pirate.github.io/security-growler">Security Growler</a>  <img src="https://pirate.github.io/security-growler/alert.png" height="20px">  <a href="https://github.com/pirate/security-growler"><img src="https://img.shields.io/github/stars/pirate/security-growler.svg" alt="Build Status"></a> <a href="https://twitter.com/thesquashSH"><img src="https://img.shields.io/twitter/url/http/shields.io.svg?style=social" alt="Twitter URL"></a>
 </h1>
 
 <p>This menubar app for OS X will notify you via Notifcation Center (or Growl) when various security events occur (<a href="https://github.com/pirate/security-growler#documentation">see list</a>).</p>
@@ -39,7 +39,8 @@
 
 <p>It's very useful if you're paranoid about people trying to hack into your computer.  Or... if you simply like having information about people using your computer's resources.</p>
 
-<p>It's easily extensible in Python, you can add modules that watch ports for connetions or parse logfiles.
+<p>It's extremely lightweight, the app is 3MB including the icon, with &lt;0.01% CPU and &lt;15MB of RAM used when running.
+It's easily extensible in Python, you can add parsers that detect new TCP connetions or poll logfiles.
 You can even forward alerts as push notifications to your iOS devices using <a href="http://prowlapp.com/">Prowl</a>.</p>
 
 <h2>
@@ -59,7 +60,7 @@ You can even forward alerts as push notifications to your iOS devices using <a h
 <h2>
 <a id="it-can-do-cool-things-like" class="anchor" href="#it-can-do-cool-things-like" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>It can do cool things like:</h2>
 
-<p><strong>Alert you to attempted and succesfull SSH logins:</strong></p>
+<p><strong>Alert you of attempted and succesfull SSH logins:</strong></p>
 
 <p><img src="http://pirate.github.io/security-growler/screenshots/ssh_fail_event.PNG" width="40%">
 <img src="http://pirate.github.io/security-growler/screenshots/ssh_key_event.PNG" width="40%"></p>
@@ -70,8 +71,6 @@ You can even forward alerts as push notifications to your iOS devices using <a h
 <img src="http://pirate.github.io/security-growler/screenshots/connection_event.PNG" width="40%"></p>
 
 <p><strong>Notify you whenever a command is run with <code>sudo</code>:</strong></p>
-
-
 
 <p><img src="http://pirate.github.io/security-growler/screenshots/sudo_context.PNG" height="350px"></p>
 
@@ -91,20 +90,31 @@ You can even forward alerts as push notifications to your iOS devices using <a h
 <li>FTP</li>
 <li>SMB</li>
 <li>AFP</li>
-<li>VNC</li>
 <li>MySQL</li>
 <li>PostgreSQL</li>
 <li>iTunes Sharing</li>
 <li>sudo commands</li>
 <li>port-scans (e.g. if you're on the receiving end of nmap)</li>
+<li>VNC (requires app is run as root)</li>
 </ul>
+
+<p>TODO: </p>
+
+<ul>
+<li>keychain auth events (<code>/var/log/authd.log</code>, <code>/var/log/accountpolicy.log</code>)</li>
+<li>new listening sockets under port 1000 opened</li>
+<li>Wifi events?</li>
+</ul>
+
+<h3>
+<a id="config" class="anchor" href="#config" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Config:</h3>
 
 <p>Settings are changed by editing a text file <code>settings.py</code>, accesible via the menubar dropdown item 'Settings...'.</p>
 
 <p><strong>To enable or disable alert types:</strong></p>
 
 <p>You can enable and disable certain alerts by editing the <code>WATCHED_SOURCES</code> section of the file.
-Simply add or remove event sources on the left (either port numbers or logfile paths), and put the parsers you want to enable on the right.</p>
+Simply add or remove event sources on the left (either port numbers or logfile paths), and put the parser names you want to enable for each source on the right.  Parser names can by found by looking at the filenames in the <a href="https://github.com/pirate/security-growler/tree/master/parsers"><code>parsers/</code></a> folder.</p>
 
 <div class="highlight highlight-source-python"><pre><span class="pl-c"># e.g. this config only alerts for FTP, iTunes Sharing, sudo, &amp; SSH</span>
 <span class="pl-c1">WATCHED_SOURCES</span> <span class="pl-k">=</span> {
@@ -115,8 +125,7 @@ Simply add or remove event sources on the left (either port numbers or logfile p
 
 <p><strong>To enable or disable alert channels, such as Notifcation Center or Growl:</strong></p>
 
-<p>Edit the settings file by using the 'Settings...' dropdown item.
-Change the <code>LOGGERS</code> section to suit your needs.</p>
+<p>Change the <code>LOGGERS</code> section to suit your needs.</p>
 
 <div class="highlight highlight-source-python"><pre><span class="pl-c1">LOGGERS</span> <span class="pl-k">=</span> [
     <span class="pl-s"><span class="pl-pds">'</span>stdout<span class="pl-pds">'</span></span>,
@@ -125,12 +134,11 @@ Change the <code>LOGGERS</code> section to suit your needs.</p>
     <span class="pl-c"># 'osxnotifications',  # prepend a hash to disable a certain channel</span>
 ]</pre></div>
 
-<p><strong>To change event display preferences:</strong></p>
+<p><strong>To change notification preferences:</strong></p>
 
-<p>Edit the settings file by using the 'Settings...' dropdown item.</p>
+<p>Change <code>POLLING_SPEED</code> to make the app update more or less frequently (2-10 seconds is recommended).  </p>
 
-<p>Change <code>POLLING_SPEED</code> to make the app update more or less frequently (2-10 seconds is recommended).
-Change the <code>INFO_</code> and <code>ALERT_</code> items to modify properties such as alert sounds, icons, and text.</p>
+<p>Change the <code>INFO_</code> and <code>ALERT_</code> items to modify properties such as alert sounds, icons, and text.</p>
 
 <h2>
 <a id="developer-info" class="anchor" href="#developer-info" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Developer Info:</h2>
@@ -142,8 +150,7 @@ Change the <code>INFO_</code> and <code>ALERT_</code> items to modify properties
 <a href="https://github.com/pirate/security-growler/tree/master/sources"><code>sources</code></a> are either file paths or port numbers, e.g. <code>/var/log/system.log</code> or <code>5900</code>
 </li>
 <li>
-<a href="https://github.com/pirate/security-growler/tree/master/parsers"><code>parsers</code></a> take the text from the <code>sources</code>, and parse out various alerts, e.g. <code>ssh</code> or <code>sudo</code>
-</li>
+<a href="https://github.com/pirate/security-growler/tree/master/parsers"><code>parsers</code></a> e.g. <code>ssh</code> or <code>sudo</code> are fed new logfile lines yielded from <code>sources</code>, and parse out various alerts</li>
 <li>
 <a href="https://github.com/pirate/security-growler/tree/master/loggers"><code>loggers</code></a> are output channels for alerts, e.g. <code>stdout</code>, <code>osxnotifications</code>, or <code>growl</code>
 </li>
