--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@ You can even forward alerts as push notifications to your iOS devices using <a h
 <p><img src="http://pirate.github.io/security-growler/screenshots/ssh_fail_event.PNG" width="40%">
 <img src="http://pirate.github.io/security-growler/screenshots/ssh_key_event.PNG" width="40%"></p>
 
-<p><strong>Notify you of arbitrary TCP connections: VNC, FTP, SMB, MySQL, PostgreSQL, etc.:</strong></p>
+<p><strong>Notify you of incoming &amp; outgoing TCP connections: FTP, VNC, SMB, MySQL, etc.:</strong></p>
 
-<p><img src="http://pirate.github.io/security-growler/screenshots/vnc_event.PNG" width="40%">
+<p>(using <a href="https://github.com/pirate/security-growler#background">less RAM</a> than Little Snitch)<br>
+<img src="http://pirate.github.io/security-growler/screenshots/vnc_event.PNG" width="40%">
 <img src="http://pirate.github.io/security-growler/screenshots/connection_event.PNG" width="40%"></p>
 
 <p><strong>Notify you whenever a command is run with <code>sudo</code>:</strong></p>
@@ -83,7 +84,7 @@ You can even forward alerts as push notifications to your iOS devices using <a h
 <h2>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation:</h2>
 
-<p>The currently working notifiers are:</p>
+<p>The currently working alert types are:</p>
 
 <ul>
 <li>SSH</li>
@@ -95,7 +96,7 @@ You can even forward alerts as push notifications to your iOS devices using <a h
 <li>iTunes Sharing</li>
 <li>sudo commands</li>
 <li>port-scans (e.g. if you're on the receiving end of nmap)</li>
-<li>VNC (requires app is run as root)</li>
+<li>VNC (detailed alerts require app is run as root)</li>
 </ul>
 
 <p>TODO: </p>
@@ -123,7 +124,7 @@ Simply add or remove event sources on the left (either port numbers or logfile p
     <span class="pl-s"><span class="pl-pds">'</span>/var/log/system.log<span class="pl-pds">'</span></span>: (<span class="pl-s"><span class="pl-pds">'</span>sudo<span class="pl-pds">'</span></span>, <span class="pl-s"><span class="pl-pds">'</span>ssh<span class="pl-pds">'</span></span>),    <span class="pl-c"># sudo &amp; ssh</span>
 }</pre></div>
 
-<p><strong>To enable or disable alert channels, such as Notifcation Center or Growl:</strong></p>
+<p><strong>To enable or disable alert methods, such as Notifcation Center or Growl:</strong></p>
 
 <p>Change the <code>LOGGERS</code> section to suit your needs.</p>
 
@@ -131,7 +132,7 @@ Simply add or remove event sources on the left (either port numbers or logfile p
     <span class="pl-s"><span class="pl-pds">'</span>stdout<span class="pl-pds">'</span></span>,
     <span class="pl-s"><span class="pl-pds">'</span>logfile<span class="pl-pds">'</span></span>,
     <span class="pl-s"><span class="pl-pds">'</span>growl<span class="pl-pds">'</span></span>,
-    <span class="pl-c"># 'osxnotifications',  # prepend a hash to disable a certain channel</span>
+    <span class="pl-c"># 'osxnotifications',  # prepend a hash to disable a certain method</span>
 ]</pre></div>
 
 <p><strong>To change notification preferences:</strong></p>
@@ -152,7 +153,7 @@ Simply add or remove event sources on the left (either port numbers or logfile p
 <li>
 <a href="https://github.com/pirate/security-growler/tree/master/parsers"><code>parsers</code></a> e.g. <code>ssh</code> or <code>sudo</code> are fed new logfile lines yielded from <code>sources</code>, and parse out various alerts</li>
 <li>
-<a href="https://github.com/pirate/security-growler/tree/master/loggers"><code>loggers</code></a> are output channels for alerts, e.g. <code>stdout</code>, <code>osxnotifications</code>, or <code>growl</code>
+<a href="https://github.com/pirate/security-growler/tree/master/loggers"><code>loggers</code></a> are output methods for alerts, e.g. <code>stdout</code>, <code>osxnotifications</code>, or <code>growl</code>
 </li>
 </ul>
 
@@ -169,9 +170,13 @@ See <a href="https://github.com/pirate/security-growler/blob/master/menubar.sh">
 
 <p>I was tired of not being able to find an app that would quell my paranoia about open ports, so I made one myself. Now I can relax whenever I'm in a seedy internet cafe or connected to free Boingo airport wifi because I know if anyone is trying to connect to my computer.</p>
 
-<p>Feel free to submit a <a href="https://github.com/pirate/security-growler/pulls">pull-request</a> and add a <a href="https://github.com/pirate/security-growler/blob/master/parsers/vnc.py">new parser</a> (e.g. try writing one for http-auth)!</p>
+<p><a href="https://www.obdev.at/products/littlesnitch/index.html">Little Snitch</a> is still hands-down the best connection-alerting software available for Mac, I highly suggest you check it out if you want a comprehensive firewall/alerting system, and are willing to pay a few bucks to get it.  Security Growler is centered around parsing logfiles for any kind of generic pattern, not just monitoring the TCP connection table like Little Snitch.  For example, my app can alert you of <code>sudo</code> events, keychain auth events, and anything else you can think of that's reported to a logfile.  This app is significantly more lightweight than Little Snitch, it comes in at &lt;15mb of RAM used, simply because it aims to solve a simpler problem than Little Snitch.  This app is not designed to <em>prevent</em> malicious connections, that's what firewalls are for, it's just meant to keep an unobtrusive log, and alert you whenever important security events are happening.  The more informed you are, the better you can protect yourself.</p>
 
-<p>A related project is available for Linux users: <a href="https://github.com/benjojo/PushAlotAuth">PushAlotAuth</a>, it uses the PushALot push-notification platform.</p>
+<p>This app is meant for developers who frequenly run services that are open to their LAN, and just want to keep tabs on usage to make sure they aren't being abused by some local script kiddie.  Since the target audience is developers, I opted to leave some parts a little less user-friendly, such as the <code>settings.py</code> config system.</p>
+
+<p>Feel free to submit a <a href="https://github.com/pirate/security-growler/pulls">pull-request</a> and add a <a href="https://github.com/pirate/security-growler/blob/master/parsers/vnc.py">new parser</a> (e.g. try writing one for nginx http-auth)!</p>
+
+<p>A similar project written by <a href="https://github.com/benjojo">@benjojo</a> is available for Linux users: <a href="https://github.com/benjojo/PushAlotAuth">PushAlotAuth</a>, it uses the <a href="https://pushalot.com/">PushALot</a> push-notification platform.</p>
 
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License:</h2>
